fix nav content spacing

--- a/css/nav.css
+++ b/css/nav.css
@@ -22,7 +22,7 @@
 .topnav ul {
     list-style-type: none;
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     padding: 10px;
     width: 90%;
     max-width: 800px;
@@ -34,7 +34,7 @@
 }
 
 .topnav li {
-    margin: 0 35px;
+    margin: 0;
 }
 
 .topnav a {
